Fixed collapsing popup height

--- a/kasimi/mchaticonsmenu/styles/prosilver/theme/mchat.iconsmenu.css
+++ b/kasimi/mchaticonsmenu/styles/prosilver/theme/mchat.iconsmenu.css
@@ -6,7 +6,7 @@
  *
  */
 
-.mchat-buttons {
+.mchat-buttons-wrapper {
 	height: 16px;
 }
 
